--- a/_data/code/federal/statcan.yml
+++ b/_data/code/federal/statcan.yml
@@ -3,7 +3,7 @@ schemaVersion: '1.0'
 adminCode: statcan
 releases:
   - contact:
-      URL: https://github.com/CSBP-CPSE/OpenTabulate/issues
+      URL: 'https://github.com/CSBP-CPSE/OpenTabulate/issues'
       email: maksymarturo.neyra-nesterenko@canada.ca
     date:
       created: '2018-01-07'
@@ -15,14 +15,13 @@ releases:
       en: OpenTabulate
       fr: OpenTabulate
     licenses:
-      -
-        URL:
-          en: https://github.com/CSBP-CPSE/OpenTabulate/blob/master/LICENSE.md
-          fr: https://github.com/CSBP-CPSE/OpenTabulate/blob/master/LICENSE.md
+      - URL:
+          en: 'https://github.com/CSBP-CPSE/OpenTabulate/blob/master/LICENSE.md'
+          fr: 'https://github.com/CSBP-CPSE/OpenTabulate/blob/master/LICENSE.md'
         spdxID: MIT
     repositoryURL:
-      en: https://github.com/CSBP-CPSE/OpenTabulate
-      fr: https://github.com/CSBP-CPSE/OpenTabulate
+      en: 'https://github.com/CSBP-CPSE/OpenTabulate'
+      fr: 'https://github.com/CSBP-CPSE/OpenTabulate'
     tags:
       en:
         - Data
