--- a/_data/forms/config-standards.yml
+++ b/_data/forms/config-standards.yml
@@ -9,14 +9,11 @@ formGroups:
     title: name
     rule: alphanum-space
   - preset: description
-  - preset: dates
-    created: true
-    metadata: true
   - widget: string-i18n
     title: specURL
     type: url
-  - widget: string
-    title: standardOrg
+  - widget: string-i18n
+    title: standardsOrg
   - preset: tags
   - preset: hr
   - preset: empty
@@ -32,9 +29,12 @@ formGroups:
       - widget: string-i18n
         title: name
         rule: names
-  - widget: string
-    title: status
   - preset: contact
     phone: false
     required: true
+  - preset: dates
+    created: true
+    metadata: true
+  - widget: string
+    title: status
   - preset: empty
