--- a/_data/logiciels_libres-open_source_software/apache.yml
+++ b/_data/logiciels_libres-open_source_software/apache.yml
@@ -4,13 +4,12 @@ description:
   en: Cross-platform web server
   fr: Serveur Web multiplateforme
 homepageURL:
-  en: https://httpd.apache.org
-  fr: https://httpd.apache.org
+  en: 'https://httpd.apache.org'
+  fr: 'https://httpd.apache.org'
 licenses:
-  -
-    URL:
-      en: https://www.apache.org/licenses/LICENSE-2.0.txt
-      fr: https://www.apache.org/licenses/LICENSE-2.0.txt
+  - URL:
+      en: 'https://www.apache.org/licenses/LICENSE-2.0.txt'
+      fr: 'https://www.apache.org/licenses/LICENSE-2.0.txt'
     spdxID: Apache-2.0
 name:
   en: Apache
@@ -21,14 +20,12 @@ tags:
   fr:
     - Serveur HTTP
 administrations:
-  -
-    adminCode: gac-amc
+  - adminCode: gac-amc
     uses:
-      -
-        contact:
+      - contact:
           URL:
-          en: https://www.international.gc.ca
-          fr: https://www.international.gc.ca
+          en: 'https://www.international.gc.ca'
+          fr: 'https://www.international.gc.ca'
           email: sebastien.routier@international.gc.ca
         date:
           started: '2019-05-06'
