--- a/_data/logiciels_libres-open_source_software/laravel.yml
+++ b/_data/logiciels_libres-open_source_software/laravel.yml
@@ -4,13 +4,12 @@ description:
   en: PHP web framework intended for the development of web applications following the model–view–controller (MVC) architectural pattern.
   fr: Framework Web PHP destiné au développement d'applications Web suivant le modèle architectural MVC modèle-vue-contrôleur.
 homepageURL:
-  en: https://laravel.com
-  fr: https://laravel.com
+  en: 'https://laravel.com'
+  fr: 'https://laravel.com'
 licenses:
-  -
-    URL:
-      en: https://github.com/laravel/framework/blob/5.8/LICENSE.md
-      fr: https://github.com/laravel/framework/blob/5.8/LICENSE.md
+  - URL:
+      en: 'https://github.com/laravel/framework/blob/5.8/LICENSE.md'
+      fr: 'https://github.com/laravel/framework/blob/5.8/LICENSE.md'
     spdxID: MIT
 name:
   en: Laravel
@@ -23,14 +22,12 @@ tags:
     - Serveur HTTP
     - PHP
 administrations:
-  -
-    adminCode: gac-amc
+  - adminCode: gac-amc
     uses:
-      -
-        contact:
+      - contact:
           URL:
-          en: https://www.international.gc.ca
-          fr: https://www.international.gc.ca
+          en: 'https://www.international.gc.ca'
+          fr: 'https://www.international.gc.ca'
           email: sebastien.routier@international.gc.ca
         date:
           started: '2019-05-06'
