--- a/_data/logiciels_libres-open_source_software/bokeh.yml
+++ b/_data/logiciels_libres-open_source_software/bokeh.yml
@@ -4,13 +4,12 @@ description:
   en: Bokeh is an interactive visualization library that targets modern web browsers for presentation.
   fr: Bokeh est une bibliothèque de visualisation interactive qui cible les navigateurs Web modernes à des fins de présentation.
 homepageURL:
-  en: http://bokeh.pydata.org/en/latest/
-  fr: http://bokeh.pydata.org/en/latest/
+  en: 'http://bokeh.pydata.org/en/latest/'
+  fr: 'http://bokeh.pydata.org/en/latest/'
 licenses:
-  -
-    URL:
-      en: https://github.com/bokeh/bokeh/blob/master/LICENSE.txt
-      fr: https://github.com/bokeh/bokeh/blob/master/LICENSE.txt
+  - URL:
+      en: 'https://github.com/bokeh/bokeh/blob/master/LICENSE.txt'
+      fr: 'https://github.com/bokeh/bokeh/blob/master/LICENSE.txt'
     spdxID: BSD 3-Clause
 name:
   en: Bokeh
@@ -21,11 +20,9 @@ tags:
   fr:
     - Visualisation
 administrations:
-  -
-    adminCode: mtl_qc
+  - adminCode: mtl_qc
     uses:
-      -
-        contact:
+      - contact:
           email: libre@ville.montreal.qc.ca
         date:
           started: '2017-06-30'
