--- a/_data/logiciels_libres-open_source_software/cassandra.yml
+++ b/_data/logiciels_libres-open_source_software/cassandra.yml
@@ -4,13 +4,12 @@ description:
   en: Apache Cassandra is a highly-scalable partitioned row store.
   fr: Apache Cassandra est une base de données partitionnée hautement évolutif.
 homepageURL:
-  en: http://cassandra.apache.org/
-  fr: http://cassandra.apache.org/
+  en: 'http://cassandra.apache.org/'
+  fr: 'http://cassandra.apache.org/'
 licenses:
-  -
-    URL:
-      en: https://github.com/apache/cassandra/blob/trunk/LICENSE.txt
-      fr: https://github.com/apache/cassandra/blob/trunk/LICENSE.txt
+  - URL:
+      en: 'https://github.com/apache/cassandra/blob/trunk/LICENSE.txt'
+      fr: 'https://github.com/apache/cassandra/blob/trunk/LICENSE.txt'
     spdxID: Apache-2.0
 name:
   en: Cassandra
@@ -21,11 +20,9 @@ tags:
   fr:
     - Base de données
 administrations:
-  -
-    adminCode: mtl_qc
+  - adminCode: mtl_qc
     uses:
-      -
-        contact:
+      - contact:
           email: libre@ville.montreal.qc.ca
         date:
           started: '2019-01-31'
