--- a/_data/logiciels_libres-open_source_software/debezium.yml
+++ b/_data/logiciels_libres-open_source_software/debezium.yml
@@ -4,13 +4,12 @@ description:
   en: Debezium is an open source distributed platform for change data capture.
   fr: Debezium est une platforme distribuée d'une ressource ouverte pour la capture de données modifiées.
 homepageURL:
-  en: https://debezium.io/
-  fr: https://debezium.io/
+  en: 'https://debezium.io/'
+  fr: 'https://debezium.io/'
 licenses:
-  -
-    URL:
-      en: https://github.com/debezium/debezium/blob/master/LICENSE.txt
-      fr: https://github.com/debezium/debezium/blob/master/LICENSE.txt
+  - URL:
+      en: 'https://github.com/debezium/debezium/blob/master/LICENSE.txt'
+      fr: 'https://github.com/debezium/debezium/blob/master/LICENSE.txt'
     spdxID: Apache-2.0
 name:
   en: Debezium
@@ -21,11 +20,9 @@ tags:
   fr:
     - Gestion incrementale des données
 administrations:
-  -
-    adminCode: mtl_qc
+  - adminCode: mtl_qc
     uses:
-      -
-        contact:
+      - contact:
           email: libre@ville.montreal.qc.ca
         date:
           started: '2017-06-30'
