--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -4,13 +4,12 @@ description:
   en: Performs operating-system-level virtualization also known as containerization
   fr: Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation
 homepageURL:
-  en: https://www.docker.com
-  fr: https://www.docker.com
+  en: 'https://www.docker.com'
+  fr: 'https://www.docker.com'
 licenses:
-  -
-    URL:
-      en: https://www.docker.com/legal/components-licenses
-      fr: https://www.docker.com/legal/components-licenses
+  - URL:
+      en: 'https://www.docker.com/legal/components-licenses'
+      fr: 'https://www.docker.com/legal/components-licenses'
     spdxID: Apache-2.0
 name:
   en: Docker
@@ -25,11 +24,9 @@ tags:
     - Développement
     - Infrastructure
 administrations:
-  -
-    adminCode: statcan
+  - adminCode: statcan
     uses:
-      -
-        contact:
+      - contact:
           email: michael.goit@canada.ca
         date:
           started: '2019-05-06'
@@ -40,11 +37,9 @@ administrations:
         description:
           en: Development and deployment process
           fr: Processus de développements et déploiements
-  -
-    adminCode: tbs-sct
+  - adminCode: tbs-sct
     uses:
-      -
-        contact:
+      - contact:
           email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
