--- a/_data/logiciels_libres-open_source_software/elgg.yml
+++ b/_data/logiciels_libres-open_source_software/elgg.yml
@@ -4,18 +4,16 @@ description:
   en: Highly customizable web framework and CMS for building social apps
   fr: Framework Web hautement personnalisable et CMS pour créer des applications sociales
 homepageURL:
-  en: https://elgg.org/
-  fr: https://elgg.org/
+  en: 'https://elgg.org/'
+  fr: 'https://elgg.org/'
 licenses:
-  -
-    URL:
-      en: http://learn.elgg.org/en/2.0/intro/license.html
-      fr: http://learn.elgg.org/en/2.0/intro/license.html
+  - URL:
+      en: 'http://learn.elgg.org/en/2.0/intro/license.html'
+      fr: 'http://learn.elgg.org/en/2.0/intro/license.html'
     spdxID: MIT
-  -
-    URL:
-      en: http://learn.elgg.org/en/2.0/intro/license.html
-      fr: http://learn.elgg.org/en/2.0/intro/license.html
+  - URL:
+      en: 'http://learn.elgg.org/en/2.0/intro/license.html'
+      fr: 'http://learn.elgg.org/en/2.0/intro/license.html'
     spdxID: GPL-2.0
 name:
   en: Elgg
@@ -28,14 +26,12 @@ tags:
     - Collaboration
     - Sociale
 administrations:
-  -
-    adminCode: tbs-sct
+  - adminCode: tbs-sct
     uses:
-      -
-        contact:
+      - contact:
           URL:
-            en: https://github.com/gctools-outilsgc/gcconnex/issues
-            fr: https://github.com/gctools-outilsgc/gcconnex/issues
+            en: 'https://github.com/gctools-outilsgc/gcconnex/issues'
+            fr: 'https://github.com/gctools-outilsgc/gcconnex/issues'
           email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
@@ -46,11 +42,10 @@ administrations:
         description:
           en: External social networking platform hosted by the Government of Canada
           fr: Plateforme de réseautage social externe hébergée par le gouvernement du Canada
-      -
-        contact:
+      - contact:
           URL:
-          en: https://github.com/gctools-outilsgc/gcconnex/issues
-          fr: https://github.com/gctools-outilsgc/gcconnex/issues
+          en: 'https://github.com/gctools-outilsgc/gcconnex/issues'
+          fr: 'https://github.com/gctools-outilsgc/gcconnex/issues'
           email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
