--- a/_data/logiciels_libres-open_source_software/etherpad.yml
+++ b/_data/logiciels_libres-open_source_software/etherpad.yml
@@ -4,13 +4,12 @@ description:
   en: Edit text documents collaboratively in real-time
   fr: Collaboration en temps réel sur des documents textes
 homepageURL:
-  en: http://etherpad.org/
-  fr: http://etherpad.org/
+  en: 'http://etherpad.org/'
+  fr: 'http://etherpad.org/'
 licenses:
-  -
-    URL:
-      en: https://github.com/ether/etherpad-lite/blob/develop/LICENSE
-      fr: https://github.com/ether/etherpad-lite/blob/develop/LICENSE
+  - URL:
+      en: 'https://github.com/ether/etherpad-lite/blob/develop/LICENSE'
+      fr: 'https://github.com/ether/etherpad-lite/blob/develop/LICENSE'
     spdxID: Apache-2.0
 name:
   en: Etherpad
@@ -25,11 +24,9 @@ tags:
     - Éditeur texte
     - Productivité
 administrations:
-  -
-    adminCode: tbs-sct
+  - adminCode: tbs-sct
     uses:
-      -
-        contact:
+      - contact:
           email: mark.wooff@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
