--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -4,13 +4,12 @@ description:
   en: Text editor and Notepad replacement that runs in the Windows environment.
   fr: Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows.
 homepageURL:
-  en: https://notepad-plus-plus.org
-  fr: https://notepad-plus-plus.org/fr
+  en: 'https://notepad-plus-plus.org'
+  fr: 'https://notepad-plus-plus.org/fr'
 licenses:
-  -
-    URL:
-      en: https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html
-      fr: https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html
+  - URL:
+      en: 'https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html'
+      fr: 'https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html'
     spdxID: GPL-2.0
 name:
   en: Notepad-plus-plus
@@ -25,14 +24,12 @@ tags:
     - Productivité
     - Éditeur texte
 administrations:
-  -
-    adminCode: gac-amc
+  - adminCode: gac-amc
     uses:
-      -
-        contact:
+      - contact:
           URL:
-            en: https://www.international.gc.ca/
-            fr: https://www.international.gc.ca/
+            en: 'https://www.international.gc.ca/'
+            fr: 'https://www.international.gc.ca/'
           email: sebastien.routier@international.gc.ca
         date:
           started: '2019-05-06'
