--- a/_data_templates/code_mandatory.yml
+++ b/_data_templates/code_mandatory.yml
@@ -1,30 +1,28 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: abc-def
 releases:
-  -
-    contact:
-      email: "abc@xyz.com"
+  - contact:
+      email: abc@xyz.com
     date:
-      created: YYYY-MM-DD
-      metadataLastUpdated: YYYY-MM-DD
+      created: 'YYYY-MM-DD'
+      metadataLastUpdated: 'YYYY-MM-DD'
     description:
-      en: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-      fr: "Quisque bibendum ante ligula, porta vestibulum enim egestas vel."
+      en: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      fr: Quisque bibendum ante ligula, porta vestibulum enim egestas vel.
     name:
-      en: "Example"
-      fr: "Exemple"
+      en: Example
+      fr: Exemple
     licenses:
-      -
-        URL:
-          en: "https://example.com/repo/example/LICENCE-en"
-          fr: "https://example.com/repo/example/LICENCE-fr"
-        spdxID: "XYZ-1.0"
+      - URL:
+          en: 'https://example.com/repo/example/LICENCE-en'
+          fr: 'https://example.com/repo/example/LICENCE-fr'
+        spdxID: XYZ-1.0
     repositoryURL:
-      en: "https://example.com/repo/example"
-      fr: "https://example.com/repo/example"
+      en: 'https://example.com/repo/example'
+      fr: 'https://example.com/repo/example'
     tags:
       en:
-        - "tag1-en"
+        - tag1-en
       fr:
-        - "tag1-fr"
+        - tag1-fr
