--- a/_data_templates/ll-oss_mandatory.yml
+++ b/_data_templates/ll-oss_mandatory.yml
@@ -1,38 +1,35 @@
 ---
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 description:
-  en: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-  fr: "Quisque bibendum ante ligula, porta vestibulum enim egestas vel."
+  en: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  fr: Quisque bibendum ante ligula, porta vestibulum enim egestas vel.
 homepageURL:
-  en: "https://example.com/"
-  fr: "https://example.com/"
+  en: 'https://example.com/'
+  fr: 'https://example.com/'
 licenses:
-  -
-    URL:
-      en: "https://example.com/repo/example/LICENCE-en"
-      fr: "https://example.com/repo/example/LICENCE-fr"
-    spdxID: "XYZ-1.0"
+  - URL:
+      en: 'https://example.com/repo/example/LICENCE-en'
+      fr: 'https://example.com/repo/example/LICENCE-fr'
+    spdxID: XYZ-1.0
 name:
   en: Example
   fr: Exemple
 tags:
   en:
-    - "tag1-en"
+    - tag1-en
   fr:
-    - "tag1-fr"
+    - tag1-fr
 administrations:
-  -
-    adminCode: abc-def
+  - adminCode: abc-def
     uses:
-      -
-        contact:
-          email: "abc@xyz.com"
+      - contact:
+          email: abc@xyz.com
         date:
-          started: YYYY-MM-DD
-          metadataLastUpdated: YYYY-MM-DD
+          started: 'YYYY-MM-DD'
+          metadataLastUpdated: 'YYYY-MM-DD'
         description:
-          en: "Etiam rutrum, tellus nec egestas blandit."
-          fr: "Vestibulum fringilla vel purus nec iaculis."
+          en: Etiam rutrum, tellus nec egestas blandit.
+          fr: Vestibulum fringilla vel purus nec iaculis.
         name:
-          en: "Example use"
-          fr: "Exemple d'utilisation"
+          en: Example use
+          fr: Exemple d'utilisation
