--- a/_data/forms/config-oss.yml
+++ b/_data/forms/config-oss.yml
@@ -30,5 +30,9 @@ formGroups:
     rule: alphanum-space
   - preset: relatedCode
   - preset: status
+  - widget: string
+    title: users
+    required: false
+    more: true
   - preset: empty
   - preset: empty
