🤖 Committed by frederic.lestage@montral.ca

--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -6,23 +6,26 @@ releases:
       email: metro-users@framalistes.org
     date:
       created: '2006-08-28'
-      metadataLastUpdated: '2019-01-31'
+      metadataLastUpdated: '2019-07-12'
+      lastModified: '2019-01-31'
     description:
-      en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
-      fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
-    languages:
-      - Python
+      en: >-
+        The Model of the Environment and Temperature of Roads (METRo) is a road
+        forecast software.
+      fr: >-
+        Le Modèle de l'Environnement et de la Température de la Route (METRo)
+        est un logiciel de prévision de la température de la route.
     name:
       en: METRo
       fr: METRo
     licenses:
       - URL:
-          en: https://framagit.org/metroprojects/metro/blob/master/LICENSE
-          fr: https://framagit.org/metroprojects/metro/blob/master/LICENSE
+          en: 'https://framagit.org/metroprojects/metro/blob/master/LICENSE'
+          fr: 'https://framagit.org/metroprojects/metro/blob/master/LICENSE'
         spdxID: GPL-2.0
     repositoryURL:
-      en: https://framagit.org/metroprojects/metro
-      fr: https://framagit.org/metroprojects/metro
+      en: 'https://framagit.org/metroprojects/metro'
+      fr: 'https://framagit.org/metroprojects/metro'
     tags:
       en:
         - Environment
@@ -32,4 +35,7 @@ releases:
         - Environnement
         - Température
         - Routes
+    languages:
+      - Python
+    version: v1.345
     vcs: git
