--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -3,29 +3,27 @@ schemaVersion: '1.0'
 adminCode: asc-csa
 releases:
   - contact:
-      URL:
-        en: https://projects.eclipse.org/projects/technology.apogy/contact
-        fr: https://projects.eclipse.org/projects/technology.apogy/contact
       email: apogy-dev@eclipse.org
     date:
       created: '2015-09-28'
-      metadataLastUpdated: '2019-01-31'
+      metadataLastUpdated: '2019-07-12'
+      lastModified: '2019-01-31'
     description:
-      en: The one-stop-shop solution for operating robots, satellites and beyond
-      fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
-    languages:
-      - Java
+      en: 'The one-stop-shop solution for operating robots, satellites and beyond'
+      fr: >-
+        Un logiciel polyvalent pour faire fonctionner des robots et des
+        satellites
     name:
       en: Apogy
       fr: Apogy
     licenses:
       - URL:
-          en: https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE
-          fr: https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE
+          en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+          fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
         spdxID: EPL-1.0
     repositoryURL:
-      en: https://git.eclipse.org/c/apogy/apogy.git
-      fr: https://git.eclipse.org/c/apogy/apogy.git
+      en: 'https://git.eclipse.org/c/apogy/apogy.git'
+      fr: 'https://git.eclipse.org/c/apogy/apogy.git'
     tags:
       en:
         - Robots
@@ -33,4 +31,21 @@ releases:
       fr:
         - Robots
         - Espace
+    languages:
+      - Java
+    partners:
+      - URL:
+          en: 'http://www.google.com/partner'
+          fr: 'http://www.google.ca/partenaire'
+        email: contact@partner.com
+        name:
+          en: partner
+          fr: partenaire
+      - URL:
+          en: 'http://www.google.com/partner2'
+          fr: 'http://www.google.ca/partenaire2'
+        email: contact@partner2.com
+        name:
+          en: partner2
+          fr: partenaire2
     vcs: git
