--- a/_data/forms/config-standards.yml
+++ b/_data/forms/config-standards.yml
@@ -25,6 +25,7 @@ formGroups:
   - preset: adminCode
   - widget: group
     title: reference
+    more: true
     fields:
       - widget: string-i18n
         title: URL
