Feature/multiple group option (#584)
* Baseline for multiple group option

* Fixed translation

* Spelling correction

* Finished the more-option for code, started others

* Added more-group handling fof standards form

* Added functionality for more-groups to software form

* Removed duplicated code -> generic in js'

* Removed unnecessary attribute to script tags in footer

* fix build

--- a/_data/forms/config-oss.yml
+++ b/_data/forms/config-oss.yml
@@ -28,5 +28,9 @@ formGroups:
     prepend: use
   - preset: relatedCode
   - preset: status
+  - widget: string
+    title: users
+    required: false
+    more: true
   - preset: empty
   - preset: empty
