OSS: removed relatedCode, Code: added (back) relatedCode

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -43,6 +43,7 @@ formGroups:
   - widget: string-i18n
     title: repositoryUrl
     type: url
+  - preset: relatedCode
   - preset: tags
   - preset: status
   - preset: empty
