add en fr to standardsOrg in standardsForm.js file and standardsTable.html file

--- a/_data/forms/config-standards.yml
+++ b/_data/forms/config-standards.yml
@@ -12,7 +12,7 @@ formGroups:
   - widget: string-i18n
     title: specURL
     type: url
-  - widget: string
+  - widget: string-i18n
     title: standardOrg
   - preset: tags
   - preset: hr
