Update name of standardCode field

--- a/_data/normes_ouvertes-open_standards/html5.yml
+++ b/_data/normes_ouvertes-open_standards/html5.yml
@@ -24,7 +24,7 @@ name:
 specURL:
   en: 'https://www.w3.org/TR/html5/'
   fr: 'https://www.w3.org/TR/html5/'
-standardCode: HTML5
+standardAcronym: HTML5
 standardsOrg:
   en: W3C
   fr: W3C
