--- a/_data/normes_ouvertes-open_standards/utf-8.yml
+++ b/_data/normes_ouvertes-open_standards/utf-8.yml
@@ -38,7 +38,7 @@ name:
 specURL:
   en: 'https://tools.ietf.org/html/rfc3629'
   fr: 'https://tools.ietf.org/html/rfc3629'
-standardCode: UTF-8
+standardAcronym: UTF-8
 standardsOrg:
   en: IETF
   fr: IETF
